[package]
name = "archive-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["bzip2", "cab", "gzip", "lzma", "tar", "zip"]
gzip = ["flate2"]
lzma = ["rust-lzma"]

[dependencies]
bzip2 = { version = "0.4", optional = true }
cab = { version = "0.3", optional = true }
flate2 = { version = "1.0", optional = true }
infer = "0.5"
ouroboros = "0.13"
regex = "1"
rust-lzma = { version = "0.5", optional = true }
tar = { version = "0.4", optional = true }
thiserror = "1"
zip = { version = "0.5", optional = true }
